--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,6 +12,10 @@ description: |
 grade: stable
 confinement: strict
 
+architectures:
+  - build-on: arm64
+    run-on: arm64
+
 apps:
   pktfwd:
     command: bin/start.sh
