fix install hook and daemon handling, fix local_conf.json creation

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -20,6 +20,7 @@ apps:
   pktfwd:
     command: bin/start.sh
     daemon: simple
+    restart-condition: always
     plugs:
       - gpio
       - network
